[project]
name = "czi2tif"
version = "0.1.0"
description = "Convert czi files to tif files, inclusive of scaling information to their usage in Fiji/ImageJ."
readme = "README.md"
authors = [
    { name = "LucaMasin", email = "luca.mas93@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
czi2tif = "czi2tif:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
