[project]
name = "czi2tif"
version = "0.1.0"
description = "Convert czi files to tif files, inclusive of scaling information to their usage in Fiji/ImageJ."
readme = "README.md"
authors = [
    { name = "LucaMasin", email = "luca.mas93@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aicspylibczi>=3.3.1",
    "click>=8.2.1",
    "numpy>=2.3.0",
    "readlif>=0.6.6",
    "scikit-image>=0.25.2",
    "tifffile==2025.1.10",
]

[project.scripts]
czi2tif = "czi2tif:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
